sample-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: client-pods
  labels:
    name: client
spec:
  containers:
  - name: client
    image: <Image:tag>
