mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      name: mongo-pods
      labels:
        name: mongo
    spec:
      containers:
      - name: mongo
        image: <Image:tag> #mongo
        volumeMounts: #mountVolume
          - name: mongo-storage
            mountPath: /data/db
        volumes:
          - name: mongo-storage
            persistentVolumeClaim:
              claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
