server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      name: server-pods
      labels:
        name: server
    spec:
      containers:
      - name: server
        image: <Image:tag>
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: server-service-nodeport
# spec:
#   type: NodePort
#   selector:
#     app: server
#   ports:
#     - port: 80
#       targetPort: 80
#       nodePort: 30002
# ---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: NodePort
  selector:
    app: server
  ports:
    - port: 80
      targetPort: 80
