ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  # labels:
  #   name: myingress
spec:
  rules:
  - host: <Host> # turterdev.com
    http:
      paths:
      - pathType: Prefix
        path: "/" #/api/
        backend:
          service:
            name: server-service
            port: 
              number: 80
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: client-service
            port: 
              number: 80
